Issue #19428: zipimport now handles errors when reading truncated or invalid ZIP archive.